# voice-dictation

./: .gitignore  99-uinput.rules  README.md  audio_preprocess.py  hyprland.conf.snippet  process.py  pyproject.toml  requirements.txt  server.py  setup.sh  toggle_capture.sh  voice-dictation.service  ydotoold.service
